--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>form</title>
+    <title>Overlay</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav class="nav">NETFLIX</nav>
     <form action="action_page.php">
-        <div class="container">
+        <div class="card">
+           <div class="container">
             <h1>sign in</h1>
             
             <!--<label for="email"><b>Email</b></label>-->
@@ -38,7 +39,9 @@
                      ensure you are not a bot. <a href="">Learn more.</a>
                  </p>
              </div>
+        </div>  
         </div>
+       
     </form>   
 </body>
 </html>
